--- a/info.yaml
+++ b/info.yaml
@@ -1,7 +1,7 @@
 # Tiny Tapeout project information
 project:
-  title:        "ITESM_TinyTapeout"      # Project title
-  author:       "Gonzalo_GtzR"      # Your name
+  title:        "Design Flow - Semiconductors"      # Project title
+  author:       "GDL25"      # Your name
   discord:      "NaN"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
   description:  "Template for TT-10"      # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
@@ -17,7 +17,7 @@ project:
   # Source files must be in ./src and you must list each source file separately, one per line.
   # Don't forget to also update `PROJECT_SOURCES` in test/Makefile.
   source_files:
-    - "project.v"
+    - "alu_2Bits.v"
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
